Fix incorrect alignment of header
f4b551c7 attempted to combine header and content style using one
selector, but introduced a formatting issue on the header. The style has
now been split across two selectors.

--- a/002-landing-page/sources.css
+++ b/002-landing-page/sources.css
@@ -195,13 +195,11 @@ body {
     max-width: var(--main-content-max-width);
 }
 
-.header .container,
-.feature .container {
+.header .container {
     flex-grow: 0;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .header nav {
@@ -255,6 +253,14 @@ body {
     background-color: gray;
     display: flex;
     justify-content: center;
+    align-items: center;
+}
+
+.feature .container {
+    flex-grow: 0;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
